--- a/index.html
+++ b/index.html
@@ -9,7 +9,7 @@
 </head>
 <body>
     <h1>Your Library</h1>
-    <table>
+    <table id="table">
         <thead>
             <tr>
                 <th>Title</th>
@@ -22,5 +22,24 @@
 
         </tbody>
     </table>
+    <button class="form-btn" id="new-btn">New Book</button>
+    <dialog>
+        <form action="">
+            <div class="input-row">
+                <label for="title">Title:</label>
+                <input type="text" name="title" id="title" required>
+            </div>
+            <div class="input-row">
+                <label for="author">Author:</label>
+                <input type="text" name="author" id="author" required>
+            </div>
+            <div class="input-row">
+                <label for="pages">Pages:</label>
+                <input type="tel" name="pages" id="pages" required>
+            </div>
+            <button class="form-btn" id="add-btn">Add book</button>
+            <button class="form-btn" id="cancel-btn" type="button">Cancel</button>
+        </form>
+    </dialog>
 </body>
 </html>
